--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "js-md5": "^0.8.3",
     "lodash-es": "^4.17.21",
     "mitt": "^3.0.0",
+    "moment": "2.30.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
@@ -58,7 +59,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
     "@vitejs/plugin-vue": "^4.2.3",
-    "@vitejs/plugin-vue-jsx": "^3.0.1",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
     "autoprefixer": "^10.4.14",
     "cz-git": "^1.6.1",
     "eslint": "^8.41.0",
